# todo_notes_rust

./: .gitignore  Cargo.toml  LICENSE
src/: common.rs  endpoints.rs  entities.rs  get_todo_by_id.rs  get_todo_by_id_endpoint.rs  main.rs  queries.rs  todo.rs  todo_notes_error.rs  todo_repository.rs
src/common/: todo_notes_error.rs
src/entities/: user.rs
src/infrastructure/: presentation.rs
src/infrastructure/persistence/: postgres.rs
src/infrastructure/persistence/postgres/: get_todo_by_id_pg.rs
src/infrastructure/presentation/: api_actix_web.rs
src/infrastructure/presentation/api_actix_web/: endpoints.rs  main.rs
src/infrastructure/presentation/api_actix_web/endpoints/: get_todo_by_id_endpoint.rs  home.rs
src/infrastructure/presentation/api_actix_web/models/: link.rs
src/infrastructure/presentation/terminal/: main.rs
src/models/: todo.rs
src/queries/: get_todo_by_id.rs  query.rs
src/queries/get_todo_by_id/: get_todo_by_id_input.rs  get_todo_by_id_output.rs
