[package]
name = "todo_notes_server"
version = "0.1.0"
authors = ["Raigiku <raigiku@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
serde = { version = "1.0.115", features = ["derive"] }
chrono = { version = "0.4.15", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4", "with-uuid-0_8"] }
native-tls = "0.2.4"
postgres-native-tls = "0.3.0"
deadpool-postgres = "0.5.6"