[package]
name = "todo_notes_server"
version = "0.1.0"
authors = ["Raigiku <raigiku@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
serde = { version = "1.0.115", features = ["derive"] }
sqlx = { version = "0.3.5", features = ["postgres", "macros", "tls", "chrono", "uuid"] }
async-trait = "0.1.39"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.15", features = ["serde"] }